declarative/applications/landing/base/middleware.yaml
apiVersion: traefik.io/v1alpha1
kind: Middleware
metadata:
  name: landing-env-header
spec:
  headers:
    customResponseHeaders:
      X-Environment: unknown
