declarative/applications/landing/base/deployment.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: landing
  labels:
    app: landing
spec:
  replicas: 1
  selector:
    matchLabels:
      app: landing
  template:
    metadata:
      labels:
        app: landing
    spec:
      containers:
        - name: landing
          image: traefik/whoami:v1.10.3
          ports:
            - containerPort: 80
              name: http
          resources:
            requests:
              cpu: 10m
              memory: 16Mi
            limits:
              memory: 32Mi
