declarative/applications/landing/base/ingressroute.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: landing
  namespace: landing
spec:
  ingressClassName: traefik
  rules:
    - host: ecoma.io
      http:
        paths:
          - path: /
            pathType: Prefix
            backend:
              service:
                name: landing
                port:
                  number: 80
